# realsense_app

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/realsense_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/librealsense/: CMakeCache.txt  cmake_install.cmake
app/src/main/java/com/example/realsense_app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/realsense_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
